--- a/environment.yaml
+++ b/environment.yaml
@@ -19,13 +19,13 @@ dependencies:
       - tqdm
       - pylint
       - modAL
-      - azure-storage-blob
-      - azure-mgmt-compute
-      - azure-identity
-      - azure-mgmt-storage
-      - azure-common
-      - azure-core
-      - azure-mgmt-core
+      - azure-storage-blob>=12.19.0
+      - azure-mgmt-compute>=30.5.0
+      - azure-identity>=1.15.0
+      - azure-mgmt-storage>=21.1.0
+      - azure-common>=1.1.28
+      - azure-core>=1.29.1
+      - azure-mgmt-core>=1.4.0
       - opencv-python
       - streamlit_option_menu
       - pymssql>=2.2
