--- a/environment.yaml
+++ b/environment.yaml
@@ -19,12 +19,12 @@ dependencies:
       - tqdm
       - pylint
       - modAL
-      - azure-storage-blob>=12.19.0
+      - azure-storage-blob
       - azure-mgmt-compute>=30.5.0
-      - azure-identity>=1.15.0
+      - azure-identity
       - azure-mgmt-storage>=21.1.0
       - azure-common>=1.1.28
-      - azure-core>=1.29.1
+      - azure-core>=1.28.1
       - azure-mgmt-core>=1.4.0
       - opencv-python
       - streamlit_option_menu
