--- a/environment.yaml
+++ b/environment.yaml
@@ -13,7 +13,7 @@ dependencies:
   - matplotlib>=3.5
   - plotly
   - imageio
-  - tensorflow==2.13.1
+#  - tensorflow==2.13.1
   - pip
   - pip:
       - tqdm
@@ -30,7 +30,7 @@ dependencies:
       - streamlit_option_menu
       - pymssql>=2.2
       - umap-learn
-      - utopia-pipeline-tools>=0.3.28
+     # - utopia-pipeline-tools>=0.3.28
       - marimo
       - seaborn
       - ipython==8.22.2
